[package]
name = "chat_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
rocket_cors = "0.6.0-alpha2"
serde_json = "1.0.96"
